# CryptoEng_W2526_RustCode

./: .gitignore.txt  LICENSE  README.md
L1/AEAD_example_code/: cargo.toml
L1/AEAD_example_code/src/: main.rs
L1/AEAD_example_code/src/crypto/: mod.rs
L1/AEAD_example_code/src/io/: mod.rs  prompt_readline.rs  readline.rs
L1/AEAD_example_code/src/utils/: encode.rs
L1/CompareHash/: cargo.toml  test.txt
L1/CompareHash/src/: main.rs
L1/HKDF_demo/: cargo.toml
L1/HKDF_demo/src/: main.rs
L1/HKDF_demo/src/crypto/: hkdf_demo.rs  mod.rs
L1/HKDF_demo/src/io/: mod.rs
L1/HMAC_example_code/: cargo.toml
L1/HMAC_example_code/src/: lib.rs  main.rs
L1/HMAC_example_code/src/crypto/: hmac.rs
L1/HMAC_example_code/src/io/: readline.rs
L1/HMAC_example_code/src/utils/: encode.rs
L1/ReadFileandHash/: cargo.toml
L1/ReadFileandHash/src/: main.rs
L10/Hash2Curve/Rust/: Cargo.toml
L10/Hash2Curve/Rust/src/: lib.rs  main.rs
L10/OfflineDictAttack/: Dictionary.txt
L10/OfflineDictAttack/Python/: computeHash.py
L11/Hash2Curve/Python/: Hash2Curve.py
L2/DHKE-KDF-demo/: cargo.toml
L2/DHKE-KDF-demo/src/: lib.rs  main.rs
L2/DHKE-KDF-demo/src/crypto/: aead.rs  (+3 more)
L2/ReadCert/: cargo.toml  google-com.pem  www-uni-kassel-de.pem
L2/ReadCert/src/: main.rs
L3/ecdsademo/: Cargo.toml
L3/ecdsademo/src/: main.rs
L3/hkdfdemo/: cargo.toml
L3/hkdfdemo/src/: main.rs
L3/signdemo/: Cargo.toml
L3/signdemo/src/: main.rs
L4/DHIESdemo/: Cargo.toml
L4/DHIESdemo/src/: main.rs
L4/DHIESdemo/src/crypto/: dhies_aesctr_hmac.rs  mod.rs
L4/DHIESdemo/src/io/: encode.rs
(+10 files in other folders)
