[package]
name = "dhiesdemo"
version = "0.1.0"
edition = "2024"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.22.1"
aes = "0.8.4"
ctr = "0.9.2"
generic-array = "1"
rand_chacha = "0.9.0"
zeroize = "1"